<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".HomePageActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <!-- Have whatever children you want inside -->


        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:srcCompat="@drawable/menu_mapa" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:srcCompat="@drawable/menu_mapa" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="308dp"
            android:layout_height="88dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/edittext_rounded_corners" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="145dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/edittext_rounded_corners" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="145dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:srcCompat="@drawable/edittext_rounded_corners" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="145dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView9"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/edittext_rounded_corners" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="145dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/edittext_rounded_corners" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="407dp"
            android:layout_height="58dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/acess_user"
            tools:ignore="MissingConstraints,NotSibling" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/home_welcome"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="206dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/menu_1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.398"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="115dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/menu_2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView16"
            app:layout_constraintTop_toBottomOf="@+id/imageView16"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="127dp"
            android:layout_height="43dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/menu_4"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView17"
            app:layout_constraintTop_toBottomOf="@+id/imageView17"
            app:layout_constraintVertical_bias="0.868" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="113dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/menu_5"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintEnd_toEndOf="@+id/imageView11"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView18"
            app:layout_constraintTop_toBottomOf="@+id/imageView18"
            app:layout_constraintVertical_bias="0.833" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="117dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/menu_3"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintEnd_toEndOf="@+id/imageView9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/img_menu_2"
            app:layout_constraintTop_toBottomOf="@+id/img_menu_2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="277dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/home_info"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:srcCompat="@drawable/logo_action_bar" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:srcCompat="@drawable/logo_ccr" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="66dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:srcCompat="@drawable/menu_estrada" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:srcCompat="@drawable/menu_mapa" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10"
            app:srcCompat="@drawable/menu_game" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView11"
            app:layout_constraintTop_toTopOf="@+id/imageView11"
            app:srcCompat="@drawable/menu_help" />

        <ImageView
            android:id="@+id/img_menu_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9"
            app:srcCompat="@drawable/menu_qrcode" />

        <ImageView
            android:id="@+id/interface_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:srcCompat="@drawable/user" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView >